# ghttpsrv

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile.in  README.md  aclocal.m4  app.xpm  config.h.in  configure  configure.ac  main.cpp  main.h  resources.rc  server.cpp  server.h
common/: TokenIterator.h  base_sock.cpp  base_sock.h  defs-mt.m4  http_srv.cpp  http_srv.h  manifest.xml  socket.m4  srv_sock.cpp  srv_sock.h  ssl.m4  thread.cpp  thread.h  tools.cpp  tools.h  wx.m4  wxhlp.cpp  wxhlp.h
common/cmake/: toolchain-mingw64.cmake
