AC_PREREQ([2.71])
AC_INIT([ghttpsrv],[3.0])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CHECK_TOOL([STRIP],[strip])
CN_DEFINES
CN_LIB_SOCKET
CN_LIB_SSL
CN_LIB_WX
AC_CHECK_HEADERS([arpa/inet.h netdb.h stdint.h sys/ioctl.h sys/socket.h unistd.h])
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T
AC_CHECK_FUNCS([getcwd gethostname inet_ntoa memset mkdir socket strerror])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
